# synth_mirnov

./: .gitignore  CMakeLists.txt  Makefile  __init__.py  meson.build  sm_mirnov_test.ipynb  synth_mirnov.py  test.ipynb
src/: synthetic_mirnov.f90  test.f90
src_lib/: constants.f90  derivatives.f90  fft.f90  fft_mod.f90  global.f90  helper.f90  initialization.f90  main.f90  potential.f90  types.f90
src_py/: __init__.py  boozer.py  h5_lib.py  helper.py  potentials.py
